--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author: Jesán VR
 navbar-links:
   About Me: "aboutme"
   Articles: "articles"
-  Blog: "blog"
+  Blogging: "blog"
 ################
 # --- Logo --- #
 ################
