--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,10 @@ author: Jesán VR
 
 navbar-links:
   About Me: "aboutme"
-  Articles: "articles"
-  Blogging: "blog"
+  Resources:
+    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Learn markdown: "https://www.markdowntutorial.com/"
+  Author's home: "https://deanattali.com"
 ################
 # --- Logo --- #
 ################
