--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ social-network-links:
   rss: false  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
   github: JesS5116
-  twitter: daattali
+  twitter: @jesan_velazquez
 #  patreon: DeanAttali
 #  youtube: c/daattali
 #  medium: yourname
@@ -94,7 +94,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "github.com/JesS5116"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
@@ -125,8 +125,8 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
-navbar-text-col: "#404040"
+navbar-col: "#000000"
+navbar-text-col: "#FFFFFF"
 navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
 text-col: "#404040"
