change links of twitter

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ social-network-links:
   rss: false  # remove this line if you don't want to show an RSS link at the bottom
 #  facebook: deanattali
   github: JesS5116
-  twitter: @jesan_velazquez
+  twitter: jesan_velazquez
 #  patreon: DeanAttali
 #  youtube: c/daattali
 #  medium: yourname
