logo without title

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-#title: Jesán Velázquez-Reséndiz
+title: Jesán Velázquez-Reséndiz
 
 # Your name to show in the footer
 author: Jesán VR
@@ -39,7 +39,7 @@ round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-title-img: "/assets/img/rick_amorty.png"
+title-img: /assets/img/path
 
 
 #####################################
