remove page color settings

--- a/_config.yml
+++ b/_config.yml
@@ -129,8 +129,8 @@ navbar-col: "#000000"
 navbar-text-col: "#FFFFFF"
 navbar-border-col: "#DDDDDD"
 #page-col: "#FFFFFF"
-text-col: "#404040"
-link-col: "#008AFF"
+#text-col: "#404040"
+#link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#EAEAEA"
 footer-text-col: "#777777"
