--- a/_config.yml
+++ b/_config.yml
@@ -125,17 +125,17 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#000000"
-navbar-text-col: "#FFFFFF"
-navbar-border-col: "#DDDDDD"
+#navbar-col: "#000000"
+#navbar-text-col: "#FFFFFF"
+#navbar-border-col: "#DDDDDD"
 #page-col: "#FFFFFF"
 #text-col: "#404040"
 #link-col: "#008AFF"
-hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
-footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+#hover-col: "#0085A1"
+#footer-col: "#EAEAEA"
+#footer-text-col: "#777777"
+#footer-link-col: "#404040"
+#footer-hover-col: "#0085A1"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
