--- a/_config.yml
+++ b/_config.yml
@@ -125,9 +125,9 @@ navbar-var-length: false
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-#navbar-col: "#000000"
-#navbar-text-col: "#FFFFFF"
-#navbar-border-col: "#DDDDDD"
+navbar-col: "#000000"
+navbar-text-col: "#FFFFFF"
+navbar-border-col: "#000000"
 #page-col: "#FFFFFF"
 text-col: "#FFFFFF"
 #link-col: "#008AFF"
