--- a/_config.yml
+++ b/_config.yml
@@ -135,7 +135,7 @@ hover-col: "#0085A1"
 footer-col: "#000000"
 footer-text-col: "#FFFFFF"
 footer-link-col: "#404040"
-footer-hover-col: "#0085A1"
+footer-hover-col: "#000000"
 
 # Alternatively, the navbar, footer, and page background can be set to an image
 # instead of colour
