--- a/_config.yml
+++ b/_config.yml
@@ -24,14 +24,14 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: profile.png
-author: John Doe
-author_bio: Hi, my name is John Doe. I built this site using devlopr-jekyll :D
-author_email: "mail@sujaykundu.com"
-author_location: India
-author_website_url: "https://sujaykundu.com"
-typewrite-text: devlopr is a jekyll framework built for developers. You can edit this in _config.yml file
-hero_cover_img: sample_cover.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
+author_logo: photo.jpg
+author: Jesán Velázquez-Reséndiz
+author_bio: Renewable energy engineer making research on quantum computing, quantum optics and photonics
+author_email: "vereij@ier.unam.mx"
+author_location: Mexico
+author_website_url: "https://jess5116.github.io/"
+typewrite-text: Passion for quantum computing, AI and physics
+hero_cover_img: space.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
 author_work_experiences:
