change admin/config repo and site_domain

--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: github
-  repo: sujaykundu777/sujaykundu777.github.io
+  repo: JesS5116/JesS5116.github.io
   branch: master
-  site_domain: agitated-northcutt-53b578.netlify.app
+  site_domain: jess5116.github.io
 
 media_folder: "assets/img/posts" # Media files will be stored in the repo under images/uploads
 public_folder: "/assets/img/posts" # The src attribute for uploaded media will begin with /images/uploads
