--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ author_email: "vereij@ier.unam.mx"
 author_location: Mexico
 author_website_url: "https://jess5116.github.io/"
 typewrite-text: Passion for quantum computing, AI and physics
-hero_cover_img: preview.gif # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
+hero_cover_img: rick_toilette.jpg # replace this for changing homepage cover (eg. try cover.jpeg). Image should be in /assets/img
 
 # Experiences
 author_work_experiences:
