--- a/_config.yml
+++ b/_config.yml
@@ -59,15 +59,20 @@ author_education_details:
 
 # Projects
 author_project_details:
-              - project_thumbnail: gamershub.png
-                project_title: Gamers Hub
-                project_description: A Platform built for Gamers and Game Devs
-                project_url: https://gamershub.in
+              - project_thumbnail:
+                project_title: PAPIIT IN106320
+                project_description: Polaritonic condensates for quantum simulation
+                project_url: 
                 visibility: true
-              - project_thumbnail: hack4r.PNG
-                project_title: Hack4r
-                project_description: A Platform built for Hackers and Penetration Testers
-                project_url: https://hack4r.com
+              - project_thumbnail: 
+                project_title: Professor assistant
+                project_description: Assistant for Electricity and Magnetism class
+                project_url: https://www.lier.unam.mx/plan-de-estudios/mapa-curricular
+                visibility: true
+              - project_thumbnail: 
+                project_title: PAPIME PE110319
+                project_description: Prototype and manual design for experimental activities for LIER-UNAM
+                project_url: https://www.lier.unam.mx/plan-de-estudios/mapa-curricular
                 visibility: true
 
 # social links
@@ -109,7 +114,7 @@ permalink: pretty
 # Choose what to show ( can be true or false)
 show_author_work_experiences: false
 show_author_education_details: true
-show_author_project_details: false
+show_author_project_details: true
 
 # pagination of posts
 paginate: 4
