projects added with img square

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ author_work_experiences:
 
 # Education
 author_education_details:
-              - college_logo: ier.png
+              - college_logo: ier_cuadro.png
                 college_name: IER-UNAM
                 college_url: https://www.ier.unam.mx/
                 college_degree: Renewable energy engineer
@@ -59,17 +59,17 @@ author_education_details:
 
 # Projects
 author_project_details:
-              - project_thumbnail: ier.png
+              - project_thumbnail: ier_cuadro.png
                 project_title: PAPIIT IN106320
                 project_description: Polaritonic condensates for quantum simulation
                 project_url: 
                 visibility: true
-              - project_thumbnail: lier.PNG
+              - project_thumbnail: ii_c.jpg
                 project_title: Professor assistant
                 project_description: Assistant for Electricity and Magnetism class
                 project_url: https://www.lier.unam.mx/plan-de-estudios/mapa-curricular
                 visibility: true
-              - project_thumbnail: ier.png
+              - project_thumbnail: ier_cuadro.png
                 project_title: PAPIME PE110319
                 project_description: Prototype and manual design for experimental activities for LIER-UNAM
                 project_url:
