--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -46,4 +46,19 @@ xplor4r:
         url: "https://www.youtube.com/channel/UCSfLBFFfNU9r6ihfei6VeJw"
       - title: "facebook"
         url: "https://www.facebook.com/sujay.kundu2"
+        
+jesan_vr:
+  name: Jesán VR
+  username: jesan_vr
+  bio: "Hi I'm Jesan, an engineer and physicists"
+  site: https://jess5116.github.io/
+  avatar: photo.jpg
+  email: vereij@ier.unam.mx
+  social:
+    - title: "github"
+      url: "https://github.com/JesS5116"
+    - title: "twitter"
+      url: "https://twitter.com/jesan_velazquez"
+    - title: "instagram"
+      url: "https://www.instagram.com/jesanvr/"
 
